[gd_scene load_steps=20 format=3 uid="uid://cpc3v1cfnqy2a"]

[ext_resource type="Script" path="res://Level1.gd" id="1_a8g5o"]
[ext_resource type="PackedScene" uid="uid://l8sndxm4jah2" path="res://tile_map.tscn" id="1_id812"]
[ext_resource type="PackedScene" uid="uid://di8guy65rip6s" path="res://HUD.tscn" id="2_8njcm"]
[ext_resource type="Texture2D" uid="uid://cqdp3op8xt58x" path="res://ai_treehouse1.jpg" id="3_0x8b4"]
[ext_resource type="PackedScene" uid="uid://b6bk4qhoecdvc" path="res://game_over.tscn" id="5_vjg6a"]
[ext_resource type="Texture2D" uid="uid://cxdyc8mubcp14" path="res://catnervous0.png" id="6_xih1s"]
[ext_resource type="Texture2D" uid="uid://rw8n0k3ev7xg" path="res://catnervous1.png" id="7_xlcep"]
[ext_resource type="Texture2D" uid="uid://bki5l40cmeoxu" path="res://happycat0.png" id="8_vir2b"]
[ext_resource type="Texture2D" uid="uid://deabcdo5t015j" path="res://happycat1.png" id="9_2y8la"]
[ext_resource type="Script" path="res://happyAnimatedSprite2D.gd" id="10_bq3oj"]
[ext_resource type="Texture2D" uid="uid://bfexinng8ttrp" path="res://ai_treehouse1_rails.png" id="10_sthup"]
[ext_resource type="Texture2D" uid="uid://bc43jg1iyqrtj" path="res://fire0.png" id="13_a0nct"]
[ext_resource type="Texture2D" uid="uid://cd0visukq104l" path="res://fire1.png" id="14_7p4pr"]
[ext_resource type="Texture2D" uid="uid://bw8nws6swf8x2" path="res://fire2.png" id="15_ecs2u"]
[ext_resource type="Shader" path="res://water.gdshader" id="15_r1dht"]

[sub_resource type="SpriteFrames" id="SpriteFrames_yfh7n"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("6_xih1s")
}, {
"duration": 1.0,
"texture": ExtResource("7_xlcep")
}],
"loop": true,
"name": &"default",
"speed": 2.0
}]

[sub_resource type="SpriteFrames" id="SpriteFrames_ptis1"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("8_vir2b")
}, {
"duration": 1.0,
"texture": ExtResource("9_2y8la")
}],
"loop": true,
"name": &"default",
"speed": 2.0
}]

[sub_resource type="SpriteFrames" id="SpriteFrames_ghupk"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("13_a0nct")
}, {
"duration": 1.0,
"texture": ExtResource("14_7p4pr")
}, {
"duration": 1.0,
"texture": ExtResource("15_ecs2u")
}, {
"duration": 1.0,
"texture": ExtResource("14_7p4pr")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_8oqcp"]
shader = ExtResource("15_r1dht")
shader_parameter/amplitude = 2.0
shader_parameter/frequency = 12.69
shader_parameter/rippleRate = 9.2
shader_parameter/waveAmplitude = 0.1
shader_parameter/waveFrequency = 4.0
shader_parameter/blendingAmount = 0.6

[node name="Level1" type="Node2D"]
script = ExtResource("1_a8g5o")

[node name="TileMap" parent="." instance=ExtResource("1_id812")]
z_index = 2

[node name="HUD" parent="." instance=ExtResource("2_8njcm")]

[node name="Sprite2D" type="Sprite2D" parent="."]
z_index = -1
position = Vector2(375, 352)
scale = Vector2(1.46484, 0.916667)
texture = ExtResource("3_0x8b4")

[node name="GameOver" parent="." instance=ExtResource("5_vjg6a")]
visible = false

[node name="nervousAnimatedSprite2D" type="AnimatedSprite2D" parent="."]
texture_filter = 1
position = Vector2(376, 264)
scale = Vector2(3, 2.766)
sprite_frames = SubResource("SpriteFrames_yfh7n")
frame = 1
frame_progress = 0.0123813

[node name="happyAnimatedSprite2D" type="AnimatedSprite2D" parent="."]
visible = false
texture_filter = 1
position = Vector2(376, 248)
scale = Vector2(3, 2.7)
sprite_frames = SubResource("SpriteFrames_ptis1")
frame_progress = 0.053613
script = ExtResource("10_bq3oj")

[node name="Sprite2D2" type="Sprite2D" parent="."]
position = Vector2(378, 360)
scale = Vector2(1.52344, 1)
texture = ExtResource("10_sthup")

[node name="FireControl" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="fireAnimatedSprite2D" type="AnimatedSprite2D" parent="FireControl"]
texture_filter = 1
position = Vector2(240, 384)
scale = Vector2(1.76515, 2.03947)
sprite_frames = SubResource("SpriteFrames_ghupk")
frame_progress = 0.883056

[node name="fireAnimatedSprite2D2" type="AnimatedSprite2D" parent="FireControl"]
texture_filter = 1
position = Vector2(312, 550)
scale = Vector2(1.76515, 2.03947)
sprite_frames = SubResource("SpriteFrames_ghupk")
frame_progress = 0.0140265

[node name="fireAnimatedSprite2D3" type="AnimatedSprite2D" parent="FireControl"]
texture_filter = 1
position = Vector2(560, 640)
scale = Vector2(1.76515, 2.03947)
sprite_frames = SubResource("SpriteFrames_ghupk")
frame_progress = 0.323901

[node name="fireAnimatedSprite2D4" type="AnimatedSprite2D" parent="FireControl"]
texture_filter = 1
position = Vector2(544, 328)
scale = Vector2(1.76515, 2.03947)
sprite_frames = SubResource("SpriteFrames_ghupk")
frame_progress = 0.607653

[node name="Water" type="Sprite2D" parent="."]
visible = false
material = SubResource("ShaderMaterial_8oqcp")

[node name="MineControl" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[connection signal="lostGame" from="TileMap" to="." method="_on_tile_map_lost_game"]
[connection signal="wonGame" from="TileMap" to="." method="_on_tile_map_won_game"]
[connection signal="wonGame" from="TileMap" to="happyAnimatedSprite2D" method="_on_tile_map_won_game"]
[connection signal="wonGame" from="TileMap" to="FireControl" method="_on_tile_map_won_game"]
[connection signal="tryAgain" from="GameOver" to="." method="_on_game_over_try_again"]
[connection signal="tryAgain" from="GameOver" to="TileMap" method="_on_game_over_try_again"]
